--- a/senguo.cc/admin/templates/official/home.html
+++ b/senguo.cc/admin/templates/official/home.html
@@ -8,46 +8,39 @@
     <div class="swiper-container" id="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide item">
-                <img src="{{static_url('official_img/bg.jpg')}}" class="bg"/>
-                <div class="bg-bg"></div>
+                <img src="{{static_url('official_img/adone.jpg')}}" class="bg"/>
+               
                 <div class="bg-text">
-                    <h1>再小的水果店，也要有自己的O2O平台</h1>
-                    <p>水果零售新模式，再不加入就晚了。</p>
                     <a href="{{reverse_url('ApplyHome')}}">申请接入</a>
                 </div>
             </div>
             <div class="swiper-slide item">
-                <img src="{{static_url('official_img/bg.jpg')}}" class="bg"/>
-                <div class="bg-bg"></div>
+                <img src="{{static_url('official_img/adtwo.jpg')}}" class="bg"/>
+            
                 <div class="bg-text">
-                    <h1>全平台的水果商城</h1>
-                    <p>微信、客户端、PC网站，全方位覆盖</p>
                     <a href="{{reverse_url('ApplyHome')}}">申请接入</a>
                 </div>
             </div>
             <div class="swiper-slide item">
-                <img src="{{static_url('official_img/bg.jpg')}}" class="bg"/>
-                <div class="bg-bg"></div>
+                <img src="{{static_url('official_img/adthree.jpg')}}" class="bg"/>
+        
                 <div class="bg-text">
-                    <h1>最好用的后台管理系统</h1>
-                    <p>全方位数据统计、免注册微信登录、卡片式订单管理、最简易商品管理、自助式员工招募、</br>方便的工资结算，想要的功能应有尽有。</p>
                     <a href="{{reverse_url('ApplyHome')}}">申请接入</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="pagination"></div>
+    <div class="turn-page">
+        <img class="left" src="{{static_url('official_img/left_btn.png')}}" title="上一页">
+        <img class="right" src="{{static_url('official_img/right_btn.png')}}" title="下一页"> 
+    </div>
 </div>
-<div class="w1000 center-block">
-	<!--<div class="announcement text-center">
-		<ul class="box font16">
-			<li class="item"><span class="con mr10 pull-left">公告:森果推出新功能</span><span class="date text-grey pull-right">2015-03-11</span></li>
-		</ul>
-	</div>-->
-    <ul class="bar-list group">
+<div class="news-bg">
+    <ul class="bar-list group w1000">
         <li>
             <ul class="text-list">
-                <div class="title">官方公告<a class="pull-right font12 text-grey" title="官方公告" href="{{reverse_url('BbsMain')}}?action=official"  target="_blank">更多>></a></div>
+                <div class="title">官方公告<a class="pull-right font12" title="官方公告" href="{{reverse_url('BbsMain')}}?action=official"  target="_blank">更多</a></div>
                 {% for a in article_list["notice"]%}
                 <li><a href="{{reverse_url('BbsDetail',a.id)}}" title="{{a.title}}" target="_blank">{{a.title}}<span class="date">{{handler.timeday(a.create_time)}}</span></a></li>
                 {% end %}
@@ -55,7 +48,7 @@
         </li>
         <li>
             <ul class="text-list">
-                <div class="title">产品更新<a class="pull-right font12 text-grey" title="产品更新" href="{{reverse_url('BbsMain')}}?action=update"  target="_blank">更多>></a></div>
+                <div class="title">产品更新<a class="pull-right font12" title="产品更新" href="{{reverse_url('BbsMain')}}?action=update"  target="_blank">更多</a></div>
                 {% for a in article_list["update"]%}
                 <li><a href="{{reverse_url('BbsDetail',a.id)}}" title="{{a.title}}"  target="_blank">{{a.title}}<span class="date">{{handler.timeday(a.create_time)}}</span></a></li>
                 {% end %}
@@ -63,44 +56,52 @@
         </li>
         <li>
             <ul class="text-list">
-                <div class="title">运营干货<a class="pull-right font12 text-grey" title="运营干货" href="{{reverse_url('BbsMain')}}?action=dry"  target="_blank">更多>></a></div>
+                <div class="title">运营干货<a class="pull-right font12" title="运营干货" href="{{reverse_url('BbsMain')}}?action=dry"  target="_blank">更多</a></div>
                {% for a in article_list["dry"]%}
                 <li><a href="{{reverse_url('BbsDetail',a.id)}}" title="{{a.title}}"  target="_blank">{{a.title}}<span class="date">{{handler.timeday(a.create_time)}}</span></a></li>
                 {% end %}
             </ul>
         </li>
     </ul>
-    <div class="group"></div>
-    <div class="wrap-type">
+</div>
+<div class="business-bg">
+    <div class="wrap-type w1000">
         <p class="box-title">森果适用的水果经营模式</p>
         <ul class="type-list group">
             <li>
-                <div class="type-img"><img src="/static/official_img/icon9.png" alt="水果O2O"/></div>
+                <div class="type-img"><img src="/static/official_img/o2o.png" alt="水果O2O"/></div>
                 <p class="mt20 first-title">水果O2O</p>
                 <p class="second-title">森果有多种风格的商城模板，完善便捷的店铺管理功能，方便您进行水果O2O的一切探索。
-                    无论是线上下单线下自提或配送的基础模式，还是预售、团购、秒杀、周期购等创新形式，森果满足您对于技术上的一切需求。
                 </p>
             </li>
             <li>
-                <div class="type-img"><img src="/static/official_img/icon10.png" alt="水果连锁经营"/></div>
+                <div class="type-img"><img src="/static/official_img/single.png" alt="水果连锁经营"/></div>
                 <p class="mt20 first-title">水果单店铺经营</p>
                 <p class="second-title">省去店铺收银系统、CRM系统、商超系统等昂贵的成本，手机+电子秤+扫描枪，轻松开店。
                 </p>
             </li>
             <li>
-                <div class="type-img"><img src="/static/official_img/icon11.png" alt="水果单店铺经营"/></div>
+                <div class="type-img"><img src="/static/official_img/chain.png" alt="水果单店铺经营"/></div>
                 <p class="mt20 first-title">水果连锁经营</p>
                 <p class="second-title">使用森果对您连锁经营的多个店铺进行管理，对每个店铺的采购和销售情况、员工和工资记录等，了如指掌。
                 </p>
             </li>
             <li>
-                <div class="type-img"><img src="/static/official_img/icon12.png" alt="水果商家聚合"/></div>
+                <div class="type-img"><img src="/static/official_img/aggregation.png" alt="水果商家聚合"/></div>
                 <p class="mt20 first-title">水果商家聚合</p>
                 <p class="second-title">您可以将附近的水果店整合起来，打造水果商家聚合平台。
                 </p>
             </li>
         </ul>
     </div>
+</div>
+<div class="w1000 center-block">
+	<!--<div class="announcement text-center">
+		<ul class="box font16">
+			<li class="item"><span class="con mr10 pull-left">公告:森果推出新功能</span><span class="date text-grey pull-right">2015-03-11</span></li>
+		</ul>
+	</div>-->
+    
     <div class="group"></div>
     <div class="wrap-trait">
         <p class="box-title mt30">线上买水果，森果更懂你</p>
