--- a/senguo.cc/admin/static/css/official_base.css
+++ b/senguo.cc/admin/static/css/official_base.css
@@ -151,13 +151,14 @@ a,input,button{ outline:none; }
 .border-none{border: none;}
 .head-btn:hover{color: #333;border-color: #333;text-decoration:none;}
 .border-none:hover{text-decoration:underline;}
+.news-bg{width: 100%;background-color: #f0f4f0;}
 .bar-list{padding: 20px 40px;}
-.bar-list>li{width: 33.33%;border-right:1px solid #ddd;padding: 15px 30px;font-size: 14px;color: #999;float: left;}
-.bar-list>li:last-child{border-right:none;}
+.bar-list>li{background-color: #fff;width: 300px;margin-left: 6px;padding: 15px 30px;font-size: 14px;color: #999;float: left;}
 .text-list>li{line-height: 24px;position: relative;display: block;}
-.text-list>li .date{position: absolute;width: 60px;text-align: right;display: inline-block;right: 0;top: 0;}
-.text-list>li>a{display: block;font-size: 14px;color: #999;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;padding-right: 60px;}
-.text-list .title{font-size: 16px;color: #333;padding-left: 5px;border-left:4px solid #6CCA86;height: 20px;line-height: 20px;margin-bottom: 10px;}
+.text-list>li .date{position: absolute;width: 60px;text-align: right;display: inline-block;right: 0;top: 0;color:#9f9f9f;}
+.text-list>li>a{display: block;font-size: 14px;color: #9f9f9f;white-space: nowrap;overflow: hidden;text-overflow: ellipsis;padding-right: 60px;}
+.text-list .title{font-size: 16px;color: #58d0a6;height: 20px;line-height: 20px;margin-bottom: 10px;}
+.text-list .title>a{color: #9f9f9f;}
 .box-title{font-size: 22px;text-align: center;color: #333;}
 .black-bg{background-color: #1b1b1b;}
 .cyan-bg{background-color: #99cae8;}
@@ -186,6 +187,7 @@ a,input,button{ outline:none; }
 .step-list .first-title{font-size: 14px;text-align: center;color: #333;margin-top: 15px;}
 .step-list .second-title{font-size: 12px;text-align: center;color: #999;margin-top: 5px;}
 .step-list .wp5{width: 5%;height:98px;background: url("/static/images/arr-right.png") center center no-repeat;}
+.business-bg{width: 100%;background-color: #58d0a6;}
 .yellow-bg{background-color: #e69519;}
 .blue-bg{background-color: #1c8ce4;}
 .dgreen-bg{background-color: #80a977;}
@@ -224,12 +226,3 @@ a,input,button{ outline:none; }
 .wx-threeR{width: 0;height: 0;right: -32px;bottom: 17px;z-index:100;border-width: 16px;border-style: solid;border-color: transparent transparent transparent #33CC66;display: block;position: absolute;}
 .fi-kf-show .wx-threeR{bottom:5px;}
 .fi-kf-show .wx-threeRs{bottom:8px;}
-
-
-
-
-
-
-
-
-
