--- a/senguo.cc/admin/static/css/official_home.css
+++ b/senguo.cc/admin/static/css/official_home.css
@@ -13,6 +13,7 @@ body{padding-top: 0;}
 .slide-ul .item .img2{width:1100px;}
 .slide-ul .item .word2{margin-right:20px;top:180px;}
 .slide-ul .item .word3{margin-right:50px;top:110px;}
+.slide_box{position: relative;}
 .slide_box .num{position:absolute;left:50%;bottom:5px;z-index:999;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);}
 .slide_box .num li{width:15px;height:15px;border-radius:50%;border:1px solid #fff;}
 .slide_box .num .on{background:#fff;}
@@ -33,10 +34,13 @@ body{padding-top: 0;}
 .bg-text{width: 1000px;position: absolute;top: 150px;left: 50%;color: #fff;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);-ms-transform:translate(-50%,0);z-index:200;}
 .bg-text>h1{font-weight:normal;font-size: 50px;text-align: center;}
 .bg-text>p{font-size: 20px;line-height: 28px;text-align: center;}
-.bg-text>a{color: #fff;display: block;width: 140px;font-size: 16px;text-align: center;height: 40px;line-height: 40px;border: 1px solid #fff;border-radius: 2px;margin: 50px auto;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out;}
+.bg-text>a{color: #fff;display: block;width: 140px;font-size: 18px;font-weight: bold;text-align: center;height: 40px;line-height: 40px;background-color: #58d0a6;border-radius: 2px;margin: 170px auto;-webkit-transition:all .2s ease-in-out;transition:all .2s ease-in-out;}
 .bg-text>a:hover{text-decoration: none;background-color: #fff;color: #333;}
 .swiper-container{width: 1000px;height: 500px;margin: 0 auto;}
 .swiper-slide{position: relative;}
 .pagination{position: absolute;z-index:10;left: 50%;-webkit-transform:translate(-50%,0);transform:translate(-50%,0);bottom: 10px;white-space: nowrap;line-height: 1;}
 .swiper-pagination-switch{width:14px;height: 14px;border-radius:50%;-webkit-box-sizing:border-box;box-sizing:border-box;display: inline-block;margin:0 5px;-webkit-transition:all .2s ease;transition:all .2s ease;background-color: #fff;cursor: pointer;}
 .swiper-active-switch{background-color: #6CCA86;}
+.turn-page{width: 1000px;position: relative;top:-300px;z-index: 2;margin: 0 auto;}
+.turn-page .left{float: left;cursor: pointer;margin-left: -80px;}
+.turn-page .right{float: right;cursor: pointer;margin-right: -80px;}
