--- a/senguo.cc/admin/templates/official/home.html
+++ b/senguo.cc/admin/templates/official/home.html
@@ -95,25 +95,18 @@
         </ul>
     </div>
 </div>
-<div class="w1000 center-block">
-	<!--<div class="announcement text-center">
-		<ul class="box font16">
-			<li class="item"><span class="con mr10 pull-left">公告:森果推出新功能</span><span class="date text-grey pull-right">2015-03-11</span></li>
-		</ul>
-	</div>-->
-    
-    <div class="group"></div>
-    <div class="wrap-trait">
-        <p class="box-title mt30">线上买水果，森果更懂你</p>
-        <ul class="trait-list">
+<div class="online-bg">
+    <div class="wrap-trait w1000">
+        <p class="box-title mt30 online-title-color">线上买水果，森果更懂你</p>
+        <!-- <ul class="trait-list">
             <li class="first"><span class="roll black-bg l-roll">潮流</span><span class="mobg rb-bg"></span><span class="mobg lt-bg first-lt"></span>精致简约水果商城，创新有趣的营销玩法设计，引领潮流</li>
             <li class="second"><span class="roll cyan-bg r-roll">专业</span><span class="mobg lt-bg"></span><span class="mobg lb-bg"></span>专注于水果O2O，后台功能强大，使用便捷，稳定而高效</li>
             <li class="third"><span class="roll purple-bg l-roll">经验</span><span class="mobg rt-bg"></span><span class="mobg rb-bg"></span>团队前身为微信水果先行者--We信水果帮，拥有水果线上运营宝贵的经验</li>
             <li class="four"><span class="roll cyan-bg r-roll">同行</span><span class="mobg lt-bg"></span><span class="mobg lb-bg"></span>最大的水果零售商聚集地，拥有丰富的同行资源，供分享交流学习提高</li>
             <li class="five"><span class="roll black-bg l-roll">供应链</span><span class="mobg rt-bg"></span><span class="mobg lb-bg five-lb"></span>从产地到批发到零售，完善的水果供应链信息提供</li>
-        </ul>
+        </ul> -->
     </div>
-    <div class="intro_list">
+    <div class="intro_list w1000">
         <div class="intro-top">水果O2O应用场景</div>
         <ul class="group">
             <li class="item pull-left text-center">
@@ -142,7 +135,9 @@
             </li>
         </ul>
     </div>
-    <div class="wrap-step">
+</div>
+<div class="new-users">
+    <div class="wrap-step w1000">
         <p class="box-title">新手上路</p>
         <ul class="step-list group">
             <li>
@@ -164,6 +159,16 @@
             </li>
         </ul>
     </div>
+</div>
+<div class="w1000 center-block">
+	<!--<div class="announcement text-center">
+		<ul class="box font16">
+			<li class="item"><span class="con mr10 pull-left">公告:森果推出新功能</span><span class="date text-grey pull-right">2015-03-11</span></li>
+		</ul>
+	</div>-->
+    
+    
+    
     <div class="wrap-qa mt40">
         <p class="box-title">大家都在问</p>
         <ul class="qa-list group">
