--- a/senguo.cc/admin/templates/bbs/base.html
+++ b/senguo.cc/admin/templates/bbs/base.html
@@ -48,6 +48,9 @@
                         <li>
                             <span class="icon-inform icon_draft">我的草稿</span>
                         </li>
+                        <li class="quit">
+                            <span class="icon-inform icon_quit">退出论坛</span>
+                        </li>
                     </ul>
                     {% end %}
                 </div>
