--- a/senguo.cc/admin/templates/official/base.html
+++ b/senguo.cc/admin/templates/official/base.html
@@ -91,7 +91,7 @@
             <div class="iokf"></div>
         </a>
     </div>
-	<footer class="footer mt30">
+	<footer class="footer">
 		{% block bottom %}
 		<p class="text-center text-grey">鄂ICP备14012961号-1&nbsp;&nbsp;Copyright&copy;2014-2015 senguo.cc版权所有</p>
 		{% end %}
