--- a/senguo.cc/admin/templates/bbs/artical-detail.html
+++ b/senguo.cc/admin/templates/bbs/artical-detail.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="topic-detail box-border mt10">
-            <p class="c333">文章评论({{article["comment_num"]}})</p>
+            <p class="c333">文章评论(<span id="com_num">{{article["comment_num"]}}</span>)</p>
             <div class="wrap-textarea mt10">
                 <textarea class="detail-area" placeholder="你怎么看？"></textarea>
             </div>
