--- a/senguo.cc/admin/templates/bbs/publish.html
+++ b/senguo.cc/admin/templates/bbs/publish.html
@@ -246,5 +246,6 @@
 <script src="/static/js/ueditor/umeditor.config.js"></script>
 <script src="/static/js/ueditor/lang/zh-cn/zh-cn.js"></script>
 <script src="/static/js/qiniu.min.js"></script>
+<script src="/static/js/plupload/plupload.full.min.js"></script>
 <script src="{{static_url('bbs/js/bbs-main.js')}}"></script>
 {% end %}
