--- a/senguo.cc/admin/static/bbs/css/bbs-main.css
+++ b/senguo.cc/admin/static/bbs/css/bbs-main.css
@@ -85,6 +85,7 @@ div,span,p,li{-webkit-user-select:none;}
 .icon_quit{background-position: 0 -92px;}
 .post-cont img{max-width: 100% !important;}
 .go-login{border: 1px solid #fff;border-radius: 4px; width: 60px;height: 28px;line-height: 28px;display: inline-block;text-align: center;color: #fff;font-size: 14px;}
+.topic-tag{display: inline-block;margin-left: 4px;color: #4ab89e;border: 1px solid #4ab89e;border-radius: 6px;padding: 0 4px;font-weight: normal;font-size: 12px;}
 /*底部*/
 .foot{padding: 24px 0;color: #f1f1f1;text-align: center;background-color: #b8b9b9;font-size: 12px;margin-top: 60px;}
 .links_item {display: inline-block;vertical-align: middle;padding: 0 1em;line-height: 1em;border-left: 1px solid #d9dadc;}
