--- a/senguo.cc/admin/templates/bbs/profile.html
+++ b/senguo.cc/admin/templates/bbs/profile.html
@@ -33,6 +33,7 @@
             <div class="fr">
                 <a href="javascript:;" class="icon-topic dianzan">0</a>
                 <a href="javascript:;" class="icon-topic reply">0</a>
+                <a href="javascript:;" class="topic-opt edit_topic">编辑</a>
                 <a href="javascript:;" class="topic-opt del_topic">删除</a>
             </div>
             <span class="topic-class"></span>
