--- a/senguo.cc/admin/static/css/market-goods.css
+++ b/senguo.cc/admin/static/css/market-goods.css
@@ -105,6 +105,6 @@ table{width: 100%;border-collapse: collapse;table-layout: fixed;}
 .goods-tag{display: inline-block;font-size: 12px;color: #fec306;padding:0 2px;height: 16px;line-height: 14px;text-align: center;border-radius: 4px;margin-left: 4px;border: 1px solid #fec306;}
 .market-price{text-decoration:line-through;}
 .goods-info-lst{padding-bottom:50px;}
-.seckill-buy{position:absolute;right:0;top:0;width: 90px;height: 30px;line-height: 30px;cursor:pointer;background-color:#7ebf91;text-align: center;color: #fff;font-size: 14px;border-radius: 30px;}
+.seckill-buy{position:absolute;right:0;top:0;width: 90px;height: 30px;line-height: 30px;cursor:pointer;background-color:#7ebf91;text-align: center;color: #fff;font-size: 14px;border-top-left-radius: 30px;border-bottom-left-radius: 30px;}
 .seckill-buy-yes{background-color: #ccc;}
 .activity-tag{margin-left: 0;vertical-align: middle;}
