--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -16,14 +16,14 @@
 .goods-list-item .charge-style{clear:both;}
 .goods-list-item .charge-style span,a{display:inline-block;}
 .goods-list-item .charge-first{width:100%;float:left;line-height:36px;padding-right:25px;}
-.goods-list-item .charge-list{padding-right:25px;overflow:hidden;}
+.goods-list-item .charge-list{padding-right:15px;overflow:hidden;}
 .goods-list-item .charge-list li{height:36px;line-height:36px;}
 .goods-list-item .number-change{position:relative;width:90px;z-index:10;}
 .goods-list-item .minus-plus{display:inline-block;float:left;width:32px;height:32px;border:none;background:url('../svg/icon_list-2.png') no-repeat;background-size:140px 180px;position:absolute;z-index:10;}
 .goods-list-item .number-input{width:60px;position:absolute;left:14px;height:30px;line-height:30px;top:1px;border:1px solid #f7f7f8;background:#fff;}
 .goods-list-item .number-plus{right:1px;background-position:-33px -71px;}
 .goods-list-item .number-minus{left:0;background-position:1px -71px;}
-.goods-list-item .to-add{display:inline-block;width:32px;height:32px;background:url('../svg/icon_list-2.png') no-repeat;background-position:-33px -71px;position:absolute;z-index:10;right:31px;background-size:140px 180px;}
+.goods-list-item .to-add{display:inline-block;width:32px;height:32px;background:url('../svg/icon_list-2.png') no-repeat;background-position:-33px -71px;position:absolute;z-index:10;right:21px;background-size:140px 180px;}
 .goods-list-item .disable{border-color:#ccc;color:#ccc;}
 .goods-list-item .box{width:100%;height:100%;padding:5px;}
 .arrow{display:inline-block;position:absolute;bottom:3px;right:6px;width:0;height:0;border-style:solid;border-width:30px 14px 15px;transform:rotate(36deg);-ms-transform:rotate(38deg);-moz-transform:rotate(38deg);-webkit-transform:rotate(38deg);-o-transform:rotate(38deg); }
@@ -125,7 +125,7 @@
 .status-goods{position: absolute;width: 46px;height: 46px;display: inline-block;background-repeat: no-repeat;background-size: 46px;top: 2px;left: 2px;}
 .status-seckill{background-image: url('/static/images/status_seckill.png');}
 .status-discount{background-image: url('/static/images/status_discount.png');}
-.seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;cursor:pointer;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;margin-right: 7px;}
+.seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;cursor:pointer;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
 .seckill-btn-yes{background-color: #ddd !important;}
 .price-bo{color: #59D5AA;margin-right: 4px;cursor: pointer;}
 .price-tip{display: inline-block;color: #FF9800;cursor: pointer;padding: 0 4px;border-radius: 12px;border: 1px solid #ff9800;font-size: 12px;height: 18px;line-height: 16px;margin-left: 4px;vertical-align: 1px;transform: scale(0.9);-webkit-transform: scale(0.9);}
